--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   flutter_secure_storage: ^4.2.0
   fluttertoast: ^8.0.7
   flutter_quill: ^1.6.1
+  google_fonts: ^2.1.0
 
 dev_dependencies:
   flutter_test:
