--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   fluttertoast: ^8.0.7
   flutter_quill: ^1.6.1
   google_fonts: ^2.1.0
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
