--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   flutter_quill: ^1.6.1
   google_fonts: ^2.1.0
   intl: ^0.17.0
+  flutter_staggered_grid_view: ^0.4.1
 
 dev_dependencies:
   flutter_test:
