--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   google_fonts: ^2.1.0
   intl: ^0.17.0
   flutter_staggered_grid_view: ^0.4.1
+  line_icons: ^2.0.1
 
 dev_dependencies:
   flutter_test:
