--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -33,11 +33,12 @@ dependencies:
   get_it: ^6.1.1
   flutter_secure_storage: ^4.2.0
   fluttertoast: ^8.0.7
-  flutter_quill: ^1.6.1
+  flutter_quill: ^2.0.11
   google_fonts: ^2.1.0
   intl: ^0.17.0
   flutter_staggered_grid_view: ^0.4.1
   line_icons: ^2.0.1
+  material_color_gen: ^2.0.0
 
 dev_dependencies:
   flutter_test:
